# Nailed-it

./: .coze  .env.example  .env.local  .env.local.example  .gitignore  .graphifyignore  AGENTS.md  ASSIGNMENT_README.md  CLAUDE.md  DESIGN.md  Learn_From_Plexe.md  PRODUCT.md  README.md  Some additional direction from outsider.md  dev  main.py  next.config.ts  openrouter-demo.py  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: settings.json
.codex/: hooks.json
.impeccable/: design.json
agent-service/: .gitignore  README.md  pyproject.toml
agent-service/eval/: README.md  agents_eval.py  caption_catalog.py  closed_loop.py  concepts.json  eval.py  model_screen.py  real_pinterest_check.py
agent-service/nailed_agents/: __init__.py  __main__.py  bus.py  cohere_client.py  config.py  embeddings.py  enrich.py  matching.py  orchestrator.py  runner.py  sandbox.py  tools.py  trend_logic.py  trends_source.py  triggers.py
agent-service/scripts/: run-finalist.sh  run-weekly-round.sh
agent-service/skills/: ad.md  catalog.md  coupon.md  customer_ops.md  decision.md  insight.md  monitor.md  orchestrator.md  reviewer.md  trend.md
agent-service/tests/: test_agents_eval.py  test_bus.py  test_gate_hardening.py  test_runner.py  test_sandbox.py  test_tools.py  test_trend_logic.py  test_triggers.py
docs/: PRD.md  TECHNICAL_DESIGN.md  glossary.xlsx
e2e/: customer-journey.spec.ts  mobile-shell.spec.ts
graphify-out/: .graphify_python  GRAPH_REPORT.md  README.md  cost.json  graph.html  graph.json  (+1 more)
(+701 files in other folders)
