[project]
name = "nailed-agents"
version = "0.1.0"
description = "Nailed-it merchant operations agent team (ADR-0007) — Python multi-agent with OpenRouter default and optional Anthropic tool_runner."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.40",
    "supabase>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]  # eval/ holds runnable harness scripts, not pytest tests

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nailed_agents*"]
